@@ -7,10 +7,7 @@ import com.nasnav.exceptions.BusinessException;
 import com.nasnav.payments.misc.Commons;
 import com.nasnav.payments.misc.Gateway;
 import com.nasnav.payments.misc.Tools;
-import com.nasnav.persistence.OrdersEntity;
-import com.nasnav.persistence.OrganizationPaymentGatewaysEntity;
-import com.nasnav.persistence.PaymentEntity;
-import com.nasnav.persistence.PaymentRefundEntity;
+import com.nasnav.persistence.*;
 import com.nasnav.service.OrderService;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.HttpClient;
@@ -34,6 +31,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -46,7 +44,7 @@ public class MastercardService {
     public static final int FLAVOR_BASIC = 1;
     public static final int FLAVOR_NBE = 2;
 
-    private Logger classLogger = LogManager.getLogger("Payment:MCARD");
+    private static final Logger classLogger = LogManager.getLogger("Payment:MCARD");
 
     @Autowired
     private AppConfig config;
@@ -56,7 +54,8 @@ public class MastercardService {
 
     private final OrderService orderService;
 
-    private final PaymentsRepository paymentsRepository;
+    @Autowired
+    private PaymentsRepository paymentsRepository;
 
     @Autowired
     private PaymentRefundsRepository paymentRefundsRepository;
@@ -65,12 +64,14 @@ public class MastercardService {
     private OrdersRepository ordersRepository;
 
     @Autowired
+    private MetaOrderRepository metaOrderRepository;
+
+    @Autowired
     private OrganizationPaymentGatewaysRepository orgPaymentGatewaysRep;
 
 
-    public MastercardService(OrderService orderService, PaymentsRepository paymentsRepository) {
+    public MastercardService(OrderService orderService) {
         this.orderService = orderService;
-        this.paymentsRepository = paymentsRepository;
     }
 
     private String readInputStream(InputStream stream) {
@@ -207,18 +208,20 @@ public class MastercardService {
             }
             return;
         }
-        throw new BusinessException("Provided payment code does not match successIndicator", "INTVALID_CODE", CONFLICT);
+        throw new BusinessException("Provided payment code does not match successIndicator", "INVALID_CODE", CONFLICT);
     }
 
 
     public PaymentEntity initialize(MastercardAccount merchantAccount, Long metaOrderId) throws BusinessException {
 
         int flavor = merchantAccount.getFlavor();
-        ArrayList<OrdersEntity> orders = orderService.getOrdersForMetaOrder(metaOrderId);
+//        ArrayList<OrdersEntity> orders = orderService.getOrdersForMetaOrder(metaOrderId);
 
-    	if(Objects.isNull(orders)) {
-    		throw new BusinessException("No orders provided for payment!", "INVALID PARAM: order_id", NOT_ACCEPTABLE);
-    	}
+        MetaOrderEntity moe = metaOrderRepository.findByMetaOrderId(metaOrderId)
+                .orElseThrow(() -> new BusinessException("Meta order ID is invalid", "PAYMENT_FAILED", HttpStatus.NOT_ACCEPTABLE));
+//    	if(Objects.isNull(orders)) {
+//    		throw new BusinessException("No orders provided for payment!", "INVALID PARAM: order_id", NOT_ACCEPTABLE);
+//    	}
 
         String orderUid = Tools.getOrderUid(metaOrderId, classLogger);
         OrderService.OrderValue orderValue = orderService.getMetaOrderTotalValue(metaOrderId);
@@ -226,7 +229,7 @@ public class MastercardService {
             throw new BusinessException("Order ID value is invalid", "PAYMENT_FAILED", HttpStatus.NOT_ACCEPTABLE);
         }
 
-        long userId = orders.get(0).getUserId();
+        long userId = moe.getUser().getId();
         String responseContent = null;
         StringEntity requestEntity;
 
@@ -259,6 +262,7 @@ public class MastercardService {
             data.put("interaction", interaction);
             requestEntity = new StringEntity(data.toString(), ContentType.APPLICATION_JSON);
         }
+        classLogger.debug("Initiating payment for metaOrder ({}), value: ({}[{}])", metaOrderId, orderValue.amount, orderValue.currency.name());
 
         try {
             HttpClient client= HttpClientBuilder.create().build();
@@ -270,7 +274,8 @@ public class MastercardService {
             HttpPost request = new HttpPost(sessionUrl);
             request.setEntity(requestEntity);
             request.setHeader("Authorization", "Basic " + getAuthString(merchantAccount));
-            classLogger.debug("Attempting to call: " + request.getURI().toString()) ;
+            classLogger.debug("Attempting to call: {}, auth header: {}", sessionUrl ,getAuthString(merchantAccount)) ;
+            classLogger.debug("payload: " + requestEntity);
             HttpResponse response = client.execute(request);
             int status = response.getStatusLine().getStatusCode();
             if (status > 299) {
@@ -288,8 +293,8 @@ public class MastercardService {
                 String[] pairs = responseContent.split("&");
                 for (String pair : pairs) {
                     int idx = pair.indexOf("=");
-                    String param = URLDecoder.decode(pair.substring(0, idx), "UTF-8");
-                    String value = URLDecoder.decode(pair.substring(idx + 1), "UTF-8");
+                    String param = URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8);
+                    String value = URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8);
                     if ("result".equals(param)) {
                         result = value;
                     } else if ("session.updateStatus".equals(param)) {
